Update and rename Selectors to Selectors.html

--- a/Selectors.html
+++ b/Selectors.html
@@ -398,30 +398,30 @@ $(document).ready(function(){
 <p><b>My latest discoveries has led me to believe that we are all animals:</b></p>
 
 <table>
-Name	Type of Animal
-Mickey	Mouse
-Goofey	Dog
-Daisy	Duck
-Pluto	Dog
+<p>Name	Type of Animal</p>
+<p>Mickey	Mouse</p>
+<p>Goofey	Dog</p>
+<p>Daisy	Duck</p>
+<p>Pluto	Dog</p>
 </table>
-Subscribe to my newsletter:
+<p>Subscribe to my newsletter:</p>
 
-Name:
-E-mail:
-Password:
-••••••••
-Female:  Male:  Other: 
-Newscategories:
+<p>Name:</p>
+<p>E-mail:</p>
+<p>Password:</p>
+<p>••••••••</p>
+<p>Female:  Male:  Other: </p>
+<p>Newscategories:</p>
 
-Ducks:
-Dogs:
-Humans:
-Reset  Submit  Cancel
-My Favourite:
+<p>Ducks:</p>
+<p>Dogs:</p>
+<p>Humans:</p>
+<p>Reset  Submit  Cancel</p>
+<p>My Favourite:</p>
 
-DonaldMickeyGoofy
-Upload image:
+<p>DonaldMickeyGoofy</p>
+<p>Upload image:</p>
 
-Choose File  Submit
+<p>Choose File  Submit</p>
 </body>
 </html>
