--- a/Selectors/index.html
+++ b/Selectors/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html><html>
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="script.js"></script>
@@ -28,17 +27,51 @@
 <h3>We are all animals!</h3>
 
 <p><b>My latest discoveries has led me to believe that we are all animals:</b></p>
-
+                                   
 <table>
-<p>Name	Type of Animal</p>
-<p>Mickey	Mouse</p>
-<p>Goofey	Dog</p>
-<p>Daisy	Duck</p>
-<p>Pluto	Dog</p>
+<tr>
+  <th>Name</th>	
+  <th>Type of Animal</th>
+</tr>
+<tr>
+    <td>Mickey</td>	
+    <td>Mouse</td>
+</tr>     
+<tr>                                    
+    <td>Goofey</td>
+    <td>Dog</td>
+</tr> 
+<tr>                                                                       
+    <td>Daisy</td>	
+    <td>Duck</td>
+</tr>                                    
+<tr>                                    
+    <td>Pluto</td>	
+    <td>Dog</td>
+</tr>                                       
 </table>
 <p>Subscribe to my newsletter:</p>
 
 <p>Name:</p>
+<p>E-mail:</p>
+<p>Password:</p>
+<p>••••••••</p>
+<p>Female:  Male:  Other: </p>
+<p>Newscategories:</p>
+
+<p>Ducks:</p>
+<p>Dogs:</p>
+<p>Humans:</p>
+<p>Reset  Submit  Cancel</p>
+<p>My Favourite:</p>
+
+<p>DonaldMickeyGoofy</p>
+<p>Upload image:</p>
+
+<p>Choose File  Submit</p>
+</body>
+</html>
+
 <p>E-mail:</p>
 <p>Password:</p>
 <p>••••••••</p>
