--- a/Selectors/index.html
+++ b/Selectors/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html>
+<html>
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="script.js"></script>
@@ -6,22 +6,21 @@
 <body>
 
 <h1>Welcome to My Homepage</h1>
+  
 <div class="intro">
 <p>My name is Donald <span id="Lastname">Duck</span></p>
-
 <p id="my-Address">I live in Duckburg</p>
-
 <p>I have many friends:</p>
 </div>
-
-<ul id="Listfriends>
+  
+<ul id="Listfriends">
 <li>Goofy</li>
 <li>Mickey</li>
 <li>Daisy</li>
 <li>Pluto</li>
 </ul>
+        
 <p>I really like Daisy!!</p>
-
 <p lang="it" title="Hello beautiful">Ciao bella</p>
 
 <h3>We are all animals!</h3>
@@ -53,25 +52,6 @@
 <p>Subscribe to my newsletter:</p>
 
 <p>Name:</p>
-<p>E-mail:</p>
-<p>Password:</p>
-<p>••••••••</p>
-<p>Female:  Male:  Other: </p>
-<p>Newscategories:</p>
-
-<p>Ducks:</p>
-<p>Dogs:</p>
-<p>Humans:</p>
-<p>Reset  Submit  Cancel</p>
-<p>My Favourite:</p>
-
-<p>DonaldMickeyGoofy</p>
-<p>Upload image:</p>
-
-<p>Choose File  Submit</p>
-</body>
-</html>
-
 <p>E-mail:</p>
 <p>Password:</p>
 <p>••••••••</p>
