--- a/Selectors/index.html
+++ b/Selectors/index.html
@@ -49,24 +49,27 @@
     <td>Dog</td>
 </tr>                                       
 </table>
-<p>Subscribe to my newsletter:</p>
+
+<section>  
+<h3>Subscribe to my newsletter:</h3>
 
 <p>Name:</p>
 <p>E-mail:</p>
 <p>Password:</p>
 <p>••••••••</p>
 <p>Female:  Male:  Other: </p>
-<p>Newscategories:</p>
+<h2>Newscategories:</h2>
 
 <p>Ducks:</p>
 <p>Dogs:</p>
 <p>Humans:</p>
 <p>Reset  Submit  Cancel</p>
-<p>My Favourite:</p>
+<h3>My Favourite:</h3>
 
 <p>DonaldMickeyGoofy</p>
-<p>Upload image:</p>
+<h4>Upload image:</h4>
 
 <p>Choose File  Submit</p>
+</section>   
 </body>
 </html>
