--- a/Selectors/index.html
+++ b/Selectors/index.html
@@ -2,6 +2,7 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="script.js"></script>
+<script src="style.css"></script>  
 </head>
 <body>
 
