--- a/Selectors/index.html
+++ b/Selectors/index.html
@@ -2,11 +2,72 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="script.js"></script>
-<script src="style.css"></script>  
+<script src="style.css"></script>    
 </head>
 <body>
+<button>$("#Lastname")</button>
+<button>$(".intro")</button>  
+<button>$(".intro, #Lastname")</button>
+<button>$("h1")</button>
+<button>$("h1, p")</button>
+<button>$("p:first")</button>  
+<button>$("p:last")</button>
+<button>$("tr:even")</button>
+<button>$("tr:odd")</button>
+<button>$("p:first-child")</button>  
+<button>$("p:first-of-type")</button>
+<button>$("p:last-child")</button>  
+<button>$("p:last-of-type")</button>
+<button>$("li:nth-child(1)")</button>  
+<button>$("li:nth-last-child(1)")</button>
+<button>$("li:nth-of-type(2)")</button>
+<button>$("li:nth-last-of-type(2)")</button>
+<button>$("b:only-child")</button>  
+<button>$("h3:only-of-type")</button>
+<button>$("div > p")</button>
+<button>$("div p")</button>
+<button>$("ul + h3")</button>  
+<button>$("ul ~ table")</button>
+<button>$("ul li:eq(0)")</button>
+<button>$("ul li:gt(0)")</button>
+<button>$("ul li:lt(2)")</button>  
+<button>$(":header")</button>
+<button>$(":header:not(h1)")</button>
+<button>$(":animated")</button>
+<button>$(":focus")</button>  
+<button>$(":contains(Duck)")</button>
+<button>$("div:has(p)")</button>
+<button>$(":empty")</button>
+<button>$(":parent")</button>  
+<button>$("p:hidden")</button>
+<button>$("table:visible")</button>
+<button>$(":root")</button>
+<button>$("p:lang(it)")</button>
+<button>$("[id]")</button>  
+<button>$("[id=my-Address]")</button>
+<button>$("p[id!=my-Address]")</button>
+<button>$("[id$=ess]")</button>
+<button>$("[id|=my]")</button>  
+<button>$("[id^=L]")</button>
+<button>$("[title~=beautiful]")</button>
+<button>$("[id*=s]")</button>
+<button>$(":input")</button>  
+<button>$(":text")</button>
+<button>$(":password")</button>
+<button>$(":radio")</button>
+<button>$(":checkbox")</button>
+<button>$(":submit")</button>
+<button>$(":reset")</button>
+<button>$(":button")</button>
+<button>$(":image")</button>
+<button>$(":file")</button>
+<button>$(":enabled")</button>
+<button>$(":disabled")</button>
+<button>$(":selected")</button>  
+<button>$(":checked")</button>
+<button>$("*")</button>
 
-<h1>Welcome to My Homepage</h1>
+  <h1>Welcome to My Homepage</h1>
   
 <div class="intro">
 <p>My name is Donald <span id="Lastname">Duck</span></p>
